pycparser: update README

--- a/m2c_pycparser/README
+++ b/m2c_pycparser/README
@@ -1,2 +1,6 @@
-Vendored copy of https://github.com/eliben/pycparser, with some slight changes.
-Upstream commit: f49af81928e3dfc95bf30683c4370eb5bac07c45 ("Update release info in TODO", Tue Sep 9 06:28:15 2025)
+Vendored copy of https://github.com/eliben/pycparser, with some patches to accept various C syntax extensions.
+Upstream commit: b5c6024ff01346b194e43435af71a210b1e8e2ae ("Update _ast_gen.py to be in sync with c_ast.py (#582)", Sep 16 2025)
+
+Changes inspired by https://github.com/inducer/pycparserext.
+
+To update lextab/yacctab: `rm -f *tab.py && python3 _build_tables.py`
